# svdwrapper

./: .gitlab-ci.yml  .woodpecker.yaml  AUTHORS  Cargo.toml  Justfile  README.md  TODO.md  build.rs
.github/workflows/: ci.yml
.neovim/: projectconf.lua
src/: lib.rs  magma_bindings.rs  main.rs  svd.rs  svd_cpu_f32_impl.rs  svd_cpu_f64_impl.rs  svd_cpu_impl.rs  svd_cuda_f32_impl.rs  svd_cuda_f64_impl.rs  svd_cuda_impl.rs  svd_julia_f32.jl  svd_julia_f32_impl.rs  svd_julia_f64.jl  svd_julia_f64_impl.rs  svd_opencl_impl.rs
tests/: svd_cpu_f32_impl_test.rs  svd_cpu_f64_impl_test.rs  svd_cpu_impl_test.rs  svd_cuda_f32_impl_test.rs  svd_cuda_f64_impl_test.rs  svd_julia_f32_impl_test.rs  svd_julia_f64_impl_test.rs
