[package]
name = "svdwrapper"
version = "0.1.0"
edition = "2024"

[features]
default = []
cuda   = ["dep:cudarc"]
cpu    = []
opencl = []
julia  = ["dep:jlrs"]
rocm   = []

[build-dependencies]
bindgen = "0.72.1"

[dependencies]
cudarc = { version = "0.19.3", features = ["driver", "nvrtc", "cusolver", "cuda-version-from-build-system"], optional = true }
jlrs = { version = "0.23", features = ["multi-rt", "jlrs-derive", "async-rt"], optional = true }

libc = "0.2"
anyhow = "1.0.102"
ndarray = { version = "0.17.2" }
ndarray-linalg = { version = "0.18.1" }
ndarray-rand = { version = "0.16" }
num-complex = "0.4.6"
